remove image files, add s3 links

--- a/src/app/components/home/Header.module.scss
+++ b/src/app/components/home/Header.module.scss
@@ -6,7 +6,7 @@
   padding: 3rem 2rem;
   background-color: rgba(0, 0, 0, 0.35);
   background-blend-mode: darken;
-  background-image: url("../../../../public/home/fd-garden.webp");
+  background-image: url("https://los-project-images.s3.us-east-1.amazonaws.com/batey/batey-home-fd-garden.webp");
   background-size: cover;
   background-position: center;
   font-family: "eb garamond";
