--- a/src/app/components/home/featured-product.module.scss
+++ b/src/app/components/home/featured-product.module.scss
@@ -4,7 +4,7 @@
   gap: 4rem;
   align-items: center;
   padding: 3rem;
-  /* background-image: url(${lcFeatured}); */
+  background-image: url("https://los-project-images.s3.us-east-1.amazonaws.com/batey/batey-home-lc-featured.webp");
   background-size: cover;
   background-position: center;
   border-image: linear-gradient(hsla(0, 0%, 0%, 0.4), hsla(0, 0%, 0%, 0.4)) fill
