build shop page

--- a/src/app/components/home/featured-product.module.scss
+++ b/src/app/components/home/featured-product.module.scss
@@ -37,8 +37,9 @@
   }
 }
 
-.productCard {
-  max-width: 300px;
+.productItem {
+  width: 100%;
+  max-width: 400px;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 1rem;
   border-radius: 5px;
