--- a/src/app/components/productCard/product-card.module.scss
+++ b/src/app/components/productCard/product-card.module.scss
@@ -1,20 +1,23 @@
-.card {
-  position: relative;
-  flex: 1;
+.productCard {
+  display: flex;
+  flex-direction: column;
   text-decoration: none;
   height: 100%;
+  width: 100%;
+}
 
-  img {
-    position: relative !important;
-    margin-bottom: 0.5rem;
-  }
+.imgWrapper {
+  position: relative;
+  width: 100%;
+  height: 450px;
+  margin-bottom: 0.5rem;
+}
 
-  div {
-    display: flex;
-    justify-content: space-between;
-    font-size: 0.8rem;
-    font-weight: 500;
-  }
+.productDetails {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 .textWhite {
