add eb garamond and inter fonts

--- a/src/app/components/footer/footer.module.scss
+++ b/src/app/components/footer/footer.module.scss
@@ -84,7 +84,7 @@
 }
 
 .footerBrand {
-  font-family: "EB Garamond";
+  font-family: var(--font-eb-garamond), serif;
   font-size: 6rem;
   text-transform: uppercase;
   line-height: 1;
