--- a/src/app/components/home/subscribe.module.scss
+++ b/src/app/components/home/subscribe.module.scss
@@ -9,7 +9,7 @@
   color: #284941;
 
   h3 {
-    font-family: "EB Garamond";
+    font-family: var(--font-eb-garamond), serif;
     font-size: 3rem;
     font-weight: 300;
     line-height: 1;
