--- a/src/app/components/home/quotes.module.scss
+++ b/src/app/components/home/quotes.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  font-family: "EB Garamond";
+  font-family: var(--font-eb-garamond), serif;
   font-size: 2.5rem;
   font-weight: 300;
   font-style: italic;
