--- a/src/app/components/footer/footer.module.scss
+++ b/src/app/components/footer/footer.module.scss
@@ -2,10 +2,12 @@
   display: flex;
   flex-wrap: wrap;
   padding: 3rem 2rem;
+  margin-top: 5rem;
 
   h4 {
     margin-bottom: 1rem;
     text-transform: uppercase;
+    font-weight: 600;
   }
 
   a {
