--- a/src/app/shop/page.module.scss
+++ b/src/app/shop/page.module.scss
@@ -9,7 +9,11 @@
   flex-wrap: wrap;
   gap: 2rem;
   justify-content: flex-start;
-  padding-left: 2rem;
+  padding: 0 2rem;
+
+  @media (min-width: 768px) {
+    padding-right: 0;
+  }
 }
 
 .title {
