--- a/src/app/components/stock/stock.module.scss
+++ b/src/app/components/stock/stock.module.scss
@@ -4,14 +4,20 @@
   gap: 0.5rem;
 }
 
+.selectSize {
+  font-size: 0.8rem;
+  color: #929292;
+}
+
 .sizeOption {
   display: inline-block;
   cursor: pointer;
   padding: 0.5rem 1.5rem;
   background-color: #f0f0f0;
-  border-radius: 25px;
   min-width: 4.5rem;
+  color: #333;
   font-size: 0.8rem;
+  font-weight: 500;
   text-align: center;
   user-select: none;
   transition: 0.3s ease;
