--- a/src/app/shop/[slug]/page.module.scss
+++ b/src/app/shop/[slug]/page.module.scss
@@ -1,24 +1,19 @@
 .productPage {
   display: flex;
   justify-content: space-evenly;
-  //   max-width: 1440px;
   margin: 3rem auto;
-  //   width: 100%;
-  //   background-color: firebrick;
 }
 
 .imgWrapper {
   display: flex;
   justify-content: center;
   flex: 1;
-  //   background-color: lightcoral;
 }
 
 .productDetails {
   display: flex;
   flex-direction: column;
   flex: 1;
-  //   background-color: aqua;
 }
 
 .tags {
@@ -27,7 +22,7 @@
   margin-bottom: 1rem;
 
   & span {
-    background-color: #f0f0f0;
+    border: 1px solid #f0f0f0;
     padding: 0.1rem 1rem;
     border-radius: 25px;
     font-size: 0.6rem;
@@ -36,4 +31,24 @@
     text-transform: uppercase;
     letter-spacing: 1px;
   }
+}
+
+.productName {
+  font-size: 2rem;
+  letter-spacing: -0.5px;
+  margin-bottom: 1rem;
+}
+
+.productPrice {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.productDesc {
+  margin-top: 2rem;
+}
+
+.buttonContainer {
+  margin-top: 2rem;
+  width: 15rem;
 }
