--- a/src/app/shop/[slug]/page.module.scss
+++ b/src/app/shop/[slug]/page.module.scss
@@ -1,7 +1,9 @@
 .productPage {
   display: flex;
+  gap: 3rem;
   justify-content: space-evenly;
   margin: 3rem auto;
+  padding: 0 2rem;
 }
 
 .imgWrapper {
