--- a/src/app/components/stock/stock.module.scss
+++ b/src/app/components/stock/stock.module.scss
@@ -21,6 +21,7 @@
   text-align: center;
   user-select: none;
   transition: 0.3s ease;
+  margin-top: 0.5rem;
 
   &:hover {
     background-color: #dfdfdf;
