--- a/src/app/shop/[slug]/page.module.scss
+++ b/src/app/shop/[slug]/page.module.scss
@@ -36,21 +36,44 @@
 }
 
 .productName {
+  margin-bottom: 0.5rem;
   font-size: 2rem;
   letter-spacing: -0.5px;
+}
+
+.productColors {
   margin-bottom: 1rem;
+  font-size: 0.8rem;
+  color: #808080;
 }
 
 .productPrice {
   font-size: 1.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .productDesc {
-  margin-top: 2rem;
+  margin-top: 3rem;
+  color: #808080;
 }
 
-.buttonContainer {
-  margin-top: 2rem;
-  width: 15rem;
+.buttonsContainer {
+  display: flex;
+  gap: 1rem;
+}
+
+.buttonWrapper {
+  &__addToCart {
+    margin-top: 2rem;
+    width: 15rem;
+  }
+
+  &__favorite {
+    margin-top: 2rem;
+    width: 3rem;
+
+    & button {
+      padding: 0.7rem 0;
+    }
+  }
 }
