--- a/src/app/shop/page.module.scss
+++ b/src/app/shop/page.module.scss
@@ -1,13 +1,17 @@
 .wrapper {
   width: 100%;
-  max-width: 1280px;
+  max-width: 1600px;
   margin: 0 auto;
+
+  @media (min-width: 1280px) {
+    padding: 0 2rem;
+  }
 }
 
 .productsContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 1.5rem;
   justify-content: flex-start;
   padding: 0 2rem;
 
@@ -38,5 +42,10 @@
   @media (min-width: 1024px) {
     flex: 1 1 calc(33.333% - 2rem);
     max-width: calc(33.333% - 2rem);
+  }
+
+  @media (min-width: 1280px) {
+    flex: 1 1 calc(25% - 1.5rem);
+    max-width: calc(25% - 1.5rem);
   }
 }
