--- a/src/app/contact/page.module.scss
+++ b/src/app/contact/page.module.scss
@@ -9,6 +9,7 @@
   @media (min-width: 728px) {
     padding: 2rem;
     flex-direction: row;
+    justify-content: space-between;
   }
 
   @media (min-width: 1280px) {
